--- a/WebShopProductUpdaterService/Web.config
+++ b/WebShopProductUpdaterService/Web.config
@@ -12,10 +12,10 @@
     <clear/>
     <add name="LocalSqlServer" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebShopProductUpdaterService-20160819033403.mdf;Initial Catalog=aspnet-WebShopProductUpdaterService-20160819033403;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebShopProductUpdaterService-20160819033403.mdf;Initial Catalog=aspnet-WebShopProductUpdaterService-20160819033403;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="eshopConnectionString" connectionString="Server=dallaswin200.arvixeshared.com;Database=milupino_test;User id=yuteam;Password=Salex1234" providerName="System.Data.SqlClient"/>
+    <add name="eshopConnectionString" connectionString="Server=dallaswin200.arvixeshared.com;Database=milupino;User id=yuteam;Password=Salex1234" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="insertIfNew" value="true"/>
+    <add key="insertIfNew" value="false"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
